--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,54 @@
-aiohttp==3.8.5
-aiosignal==1.3.1
-altair==5.0.1
-async-timeout==4.0.2
-attrs==23.1.0
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.6
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.4.0
+attrs==24.2.0
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
-decorator==5.1.1
-frozenlist==1.4.0
-gitdb==4.0.10
-GitPython==3.1.32
-idna==3.4
-importlib-metadata==6.8.0
-Jinja2==3.1.2
-jsonschema==4.18.4
-jsonschema-specifications==2023.7.1
+distro==1.9.0
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
+idna==3.8
+Jinja2==3.1.4
+jiter==0.5.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
+MarkupSafe==2.1.5
 mdurl==0.1.2
-multidict==6.0.4
-numpy==1.25.1
-openai==0.27.8
-packaging==23.1
-pandas==2.0.3
-Pillow==9.5.0
-protobuf==4.23.4
-pyarrow==12.0.1
-pydeck==0.8.0
-Pygments==2.15.1
-Pympler==1.0.1
-python-dateutil==2.8.2
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-referencing==0.30.0
-requests==2.31.0
-rich==13.4.2
-rpds-py==0.9.2
+narwhals==1.6.0
+numpy==2.1.0
+openai==1.43.0
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+protobuf==5.28.0
+pyarrow==17.0.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+referencing==0.35.1
+requests==2.32.3
+rich==13.8.0
+rpds-py==0.20.0
 six==1.16.0
-smmap==5.0.0
-streamlit==1.25.0
-tenacity==8.2.2
+smmap==5.0.1
+sniffio==1.3.1
+streamlit==1.38.0
+tenacity==8.5.0
 toml==0.10.2
-toolz==0.12.0
-tornado==6.3.2
-tqdm==4.65.0
-typing_extensions==4.7.1
-tzdata==2023.3
-tzlocal==4.3.1
-urllib3==2.0.4
-validators==0.20.0
-watchdog==3.0.0
-yarl==1.9.2
-zipp==3.16.2
+tornado==6.4.1
+tqdm==4.66.5
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+watchdog==4.0.2
